fixed navbar on mobiles; enhanced footer layout; hyperlink enhancements (#104)

--- a/client/src/app/components/Navbar.module.css
+++ b/client/src/app/components/Navbar.module.css
@@ -1,3 +1,11 @@
 body:has(.burger-menu:checked) {
   overflow-y: hidden;
 }
+
+body:has(header.OVERFLOWYHIDDEN) {
+  overflow-x: hidden;
+}
+
+body:has(header.openedNavbar) {
+  overflow-y: hidden;
+}
